# adaptive-gpu-scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: requirements.txt  start.bat  start.py  start.sh  test_imports.py  test_results.py
backend/app/: main.py
backend/app/api/: experiments.py  results.py  websocket.py
backend/app/schemas/: experiment.py  result.py
backend/app/services/: parser.py  runner.py
configs/: agents.yaml  experiment_default.yaml  policies.yaml  workloads.yaml
experiments/: exp_ablation_priority.py  exp_realworld_stub.py  exp_static_vs_rr_vs_adaptive.py
frontend/: .env.local  README.md  dashboard.html  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/monitor/: page.tsx
frontend/app/results/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/charts/: AllocationLineChart.tsx  (+5 more)
frontend/lib/: api.ts  constants.ts  utils.ts  websocket.ts
frontend/store/: useExperimentStore.ts  useRunHistory.ts
output/metrics/: adaptive_repeat0_allocations.csv  metadata.json  static_repeat0_allocations.csv  static_repeat0_metrics.csv
output/reports/: smoke_test_summary.json
scripts/: launch_all.sh  run_all_experiments.sh  run_baselines.sh  run_simulation.sh
src/adaptive_gpu/: main.py
src/adaptive_multi_agent_gpu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_adaptive_allocator.py  test_metrics.py  test_policy_comparison.py  test_workload_generator.py
(+103 files in other folders)
