[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-multi-agent-gpu"
version = "0.1.0"
description = "Paper-first implementation of adaptive GPU resource allocation for multi-agent collaborative reasoning"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]